fixed br not showing bug

--- a/css/layout.css
+++ b/css/layout.css
@@ -402,7 +402,12 @@
 		display: none;
 	}
 
+	.section.about .basic_info br {
+		display: block;
+	}
+
 }
+
 
 @media (max-width: 480px) {
 	.section.about .profile {
